2008-06-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Rename ports and ports-ecj
	aliases to hotspot-ports and hotspot-ports-ecj
	to prevent OpenJDK being extracted for make dist.

2008-06-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Make jtreg target work out of the source directory,
	and use a stamp to mark a finished icedtea build
	so we don't build it twice.
	* Makefile.in: Regenerated.

2008-06-29  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (stamps/icedtea-ecj.stamp): Add dependency on
	stamps/cacao.stamp.
	(stamps/cacao.stamp): Add dependency on stamps/rt-class-files.stamp.
	* Makefile.in: Regenerated.

2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Use build directory for
	generated directory, and copy there at
	the start if we are doing an out-of-directory
	build.
	* Makefile.in: Regenerated.

2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Add ICEDTEA_FSG_PATCHES
	to EXTRA_DIST.
	* Makefile.in: Regenerated.
	
2008-06-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Separate out ICEDTEA_FSG_PATCHES and
	add dist-openjdk-fsg target.
	* Makefile.in,
	* aclocal.m4,
	* configure:
	Regenerated.

2008-06-29  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-jdk-docs-target.patch: New.
	* Makefile.am: Apply patch.
	* Makefile.in: Regenerate.
	
2008-06-27  Joshua Sumali  <jsumali@redhat.com>

	* rt/net/sourceforge/jnlp/services/XPersistenceService.java: Throw a
	FileNotFoundException if the persistence store does not exist.

2008-06-27  Joshua Sumali  <jsumali@redhat.com>

	* rt/net/sourceforge/jnlp/Launcher.java: Exit the application if there was
	a LaunchException caught.

2008-06-26  Joshua Sumali  <jsumali@redhat.com>

	* README: Removed documentation about --enable-netx-plugin. This feature
	is enabled by default now.
	* rt/net/sourceforge/jnlp/Launcher.java: Do not show the download
	indicator if we are using gcjwebplugin.
