@@ -1,6 +1,7 @@
 // Log wrapper class for standard exceptions
 //
-// Generated by mc.scm version 1.3, DO NOT EDIT BY HAND!
+// Generated by MC.java version 1.0, DO NOT EDIT BY HAND!
+// Generated from input file ../../../../src/share/classes/com/sun/corba/se/spi/logging/data/OMG.mc on Sun Jun 22 23:48:18 BST 2008
 
 package com.sun.corba.se.impl.logging ;
 
