@@ -1,5 +1,17 @@
 2008-06-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* generated/com/sun/corbse/impl/logging/ActivationSystemException.java,
+	* generated/com/sun/corbse/impl/logging/IORSystemException.java,
+	* generated/com/sun/corbse/impl/logging/InterceptorsSystemException.java,
+	* generated/com/sun/corbse/impl/logging/NamingSystemException.java,
+	* generated/com/sun/corbse/impl/logging/OMGSystemException.java,
+	* generated/com/sun/corbse/impl/logging/ORBUtilSystemException.java,
+	* generated/com/sun/corbse/impl/logging/POASystemException.java,
+	* generated/com/sun/corbse/impl/logging/UtilSystemException.java:
+	New versions generated by the JScheme replacement (different headers).
+
+2008-06-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* Makefile.am: Rename ports and ports-ecj
 	aliases to hotspot-ports and hotspot-ports-ecj
 	to prevent OpenJDK being extracted for make dist.
